--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,32 +3,32 @@
 @tailwind utilities;
 
 html {
-  @apply bg-slate-50 dark:bg-black dark:text-white font-mono scroll-smooth;
+  @apply bg-slate-50 dark:bg-black dark:text-white scroll-smooth;
 }
 
-.typwritter-text {
-  display: inline-block;
-  overflow: hidden;
-  letter-spacing: 2px;
-  animation: typing 5s steps(30, end), blink .75s step-end infinite;
-  white-space: nowrap;
-  box-sizing: border-box;
+.hero-sub-text {
+  animation: switch-text 12s infinite ease-in-out;
 }
 
-@keyframes typing {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 100%;
-  }
+.hero-sub-text:nth-child(1) {
+  animation-delay: -12s;
 }
 
-@keyframes blink {
-  from, to {
-    border-color: transparent
+.hero-sub-text:nth-child(2) {
+  animation-delay: -8s;
+}
+
+.hero-sub-text:nth-child(3) {
+  animation-delay: -4s;
+}
+
+@keyframes switch-text {
+  0%, 20%, 100% {
+    filter: blur(0px);
+    opacity: 1;
   }
-  50% {
-    border-color: greenyellow;
+  60%, 80% {
+    filter: blur(180px);
+    opacity: 0;
   }
 }
