--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,10 @@ html {
   @apply bg-slate-50 dark:bg-black dark:text-white scroll-smooth;
 }
 
+.button {
+  @apply bg-gray-600 dark:bg-gray-300 hover:bg-gray-800 dark:hover:bg-gray-400 text-white dark:text-black;
+}
+
 .hero-sub-text {
   animation: switch-text 12s infinite ease-in-out;
 }
